Added spacing between shop now and our purpose button

--- a/store/templates/index.html
+++ b/store/templates/index.html
@@ -13,8 +13,8 @@
                     <p>Whether updating one room, or revamping rooms in your entire home, Global Vintage Love is here for you.</p>
                 </span>
                 <div class="mt-4">
-                    <a href="{% url 'products:all-products' %}" class="btn btn-primary vintage-button blue-font rounded-3" style="width: 11em;">Shop Now</a>
-                    <a href="{% url 'store:our-purpose' %}" class="btn btn-primary blue-button rounded-3" style="width: 11em;">Our Purpose</a>
+                    <a href="{% url 'products:all-products' %}" class="btn btn-primary vintage-button blue-font rounded-3 mt-3" style="width: 11em;">Shop Now</a>
+                    <a href="{% url 'store:our-purpose' %}" class="btn btn-primary blue-button rounded-3 mt-3" style="width: 11em;">Our Purpose</a>
                 </div>
             </div>
             <div class="flex-column order-lg-last order-first">
