--- a/products/templates/product-page.html
+++ b/products/templates/product-page.html
@@ -75,28 +75,28 @@
             </div>
         </div>
         <div id="product details" class="row grey-background" style="font-size: smaller; padding-top: 3em; padding-bottom: 3em;">
-            <div class="offset-md-1 col-md-5">
+            <div class="offset-1 col-md-5">
                 <div class="row">
                     <h4 style="font-weight: bold;">About</h4>
                 </div>
                 <div class="row">
-                    {{ product.description }}
+                    <p>{{ product.description }}</p>
                 </div>
             </div>
-            <div class="col-md-5">
+            <div class="offset-1 offset-md-0 col-md-5">
                 <div class="col">
                     <div class="row">
                         <h4 style="font-weight: bold;">Details</h4>
                     </div>
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-12 col-sm-5">
                             <h5>Dimensions</h5>
                             <p>Height: {{ product.dimension_height|intword }} in.</p>
                             <p>Length: {{ product.dimension_length|intword }} in.</p>
                             <p>Width: {{ product.dimension_width|intword }} in.</p>
                             <p>Weight: {{ product.dimension_weight|intword }} in.</p>
                         </div>
-                        <div class="col-4">
+                        <div class="col-12 col-sm-5">
                             {% for attribute, attr_values in product.attributes.items %}
                                 <h5>{{ attribute|title }}</h5>
                                 {% for value in attr_values %}
