Added copy for privacy-policy.html and return-policy.html

--- a/store/templates/return-policy.html
+++ b/store/templates/return-policy.html
@@ -3,9 +3,11 @@
 {% block content %}
     <section class="text-center body-padding blue-background">
         <h3 class="orange-font vintage-font">Return Policy</h3>
-        <div class="text-options white-font vintage-font mb-5">
+        <div class="text-options white-font mb-5" style="width: 90%; padding-left: 10%;">
             <span>
-                You can return products.
+                <p>We understand purchasing online can be scary, our commitment to high standards at Global Vintage Love is paramount. We offer delivery on all furniture and non-furniture items. We ask that you inspect your delivery and sign for it upon arrival. If the item is not to your satisfaction, we ask that you let us know within 7 days of receiving your item. As our items are vintage, they will have aging, some normal wear & tear and patina which is why we all love them. That said, any piece that is broken or not as you expected, we will work with you to make things right, whether that be repairing that piece at no cost or replacing it with a full credit value.</p>
+                <p>To ensure quickest delivery, items may come in multiple shipments. An expert from our team will deliver to your doorstep or storefront. In most cases, the shipping company will arrange a delivery time with you prior to arrival. We look forward to serving you and sharing the allure of vintage love.</p>
+                <p style="font-size: smaller">*Items must be returned in the condition received. To ensure proper insurance coverage, all return shipments must go through Global Vintage Love. Return shipping costs are not subsidized and may be higher than the original shipping cost.</p>
             </span>
         </div>
         <a href="{% url 'products:all-products' %}" class="btn btn-primary vintage-button white-font rounded-3">Shop Now</a>
