--- a/store/templates/index.html
+++ b/store/templates/index.html
@@ -6,7 +6,7 @@
             <div class="row" style="margin-left: 0; margin-right: 0;">
                 <div class="col-12 d-block d-lg-none" style="height: 538px; background-image: url('{% get_static_prefix %}img/Hero Image.jpg'); background-size: cover; background-position: center;">
                 </div>
-                <div class="offset-1 col-10 col-lg-5 pb-4 ps-3 pe-3 mt-4">
+                <div class="offset-1 col-10 col-lg-5 pb-4 ps-3 pe-3 mt-4 align-self-center">
                     <h3 class="orange-font mb-4" style="font-size: larger">/&nbspGlobal Vintage Love&nbsp/</h3>
                     <h2 class="mb-4">Unlocking the world of vintage one treasure at a time</h2>
                     <span class="mb-4">
