--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -6,7 +6,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>{% block page_title %}Global Vintage Love | Unlocking the World of Vintage{% endblock %}</title>
-    <link rel="shortcut icon" type="image/jpg" href="{% get_static_prefix %}img/favicon.png"/>
+
+    <!-- Start Favicon stuff -->
+    <link rel="apple-touch-icon" sizes="180x180" href="{% get_static_prefix %}img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% get_static_prefix %}img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% get_static_prefix %}img/favicon-16x16.png">
+    <link rel="manifest" href="{% get_static_prefix %}img/site.webmanifest">
+    <link rel="mask-icon" href="{% get_static_prefix %}img/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#00aba9">
+    <meta name="theme-color" content="#ffffff">
+    <!-- End Favicon stuff -->
+
     <link rel="stylesheet" href="{% get_static_prefix %}bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% get_static_prefix %}css/PowellAntique.css">
     <link rel="stylesheet" href="{% get_static_prefix %}fonts/font-awesome.min.css">
