Added similar products.

--- a/products/templates/similar-products.html
+++ b/products/templates/similar-products.html
@@ -1,5 +1,14 @@
     <section id="similar-products" class="grey-background">
-        <div>
-            {{ similar_products }}
+        <div style="padding-top: 1em; padding-bottom: 1em;" class="row">
+            <div class="col-12 col-lg-2">
+                You may also like
+            </div>
+            {% for similar_product in similar_products %}
+            <div class="col-12 col-md-6 col-lg-2 text-center" style="height: 15em;">
+                    <a href="{{ similar_product.url }}" style="text-decoration: none;">
+                        <img src="{{ similar_product.image_url }}" style="padding-bottom: 1em; padding-top: 1em; max-width: 100%; max-height: 100%;">
+                    </a>
+            </div>
+            {% endfor %}
         </div>
     </section>
