--- a/products/templates/product-page.html
+++ b/products/templates/product-page.html
@@ -8,7 +8,7 @@
 
 
 {% block content %}
-{#    {% include 'similar-products.html' %}#}
+    {% include 'similar-products.html' %}
     <section class="product-nav">
         <div class="container">
             <div class="row">
