--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -1,5 +1,4 @@
 {% load static %}
-{% load is_user_seller  %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -24,7 +23,6 @@
 
     <link rel="stylesheet" href="{% get_static_prefix %}bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% get_static_prefix %}css/PowellAntique.css">
-    <link rel="stylesheet" href="{% get_static_prefix %}fonts/font-awesome.min.css">
     <link rel="stylesheet" href="{% get_static_prefix %}fonts/ionicons.min.css">
     <link rel="stylesheet" href="{% get_static_prefix %}css/Navigation-with-Button.css">
     <link rel="stylesheet" href="{% get_static_prefix %}css/Social-Icons.css">
@@ -53,15 +51,13 @@
                             <a class="dropdown-item dropdown-item-blue" href="{% url 'store:our-purpose-retail' %}">Retail</a>
                         </div>
                     </li>
-                    {%  if user|is_seller %}
-                    <li class="nav-item"><a class="nav-link" href="{% url 'orders:bespoke-shipping' %}">Bespoke Shipping</a></li>
-                    {% else %}
-                    <li class="nav-item"><a class="nav-link" href="{% url 'store:join_movement' %}">Join The Movement</a></li>
-                    {% endif %}
+
                     {%  if user.is_authenticated %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'bespoke-shipping:create' %}">Bespoke Shipping</a></li>
                     <li class="nav-item"><a class="nav-link" style="color: #D4AF37 !important;" href="{% url 'logout' %}">Logout</a></li>
                     {% else %}
-                    <li class="nav-item"><a class="nav-link" style="color: #D4AF37 !important;" href="{% url 'login' %}?next={{request.path}}">Log In</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'store:join_movement' %}">Join The Movement</a></li>
+                    <li class="nav-item"><a class="nav-link" style="color: #D4AF37 !important;" href="{% url 'login' %}">Log In</a></li>
                     {% endif %}
                 </ul>
 
