--- a/products/templates/product-qr-grid.html
+++ b/products/templates/product-qr-grid.html
@@ -5,7 +5,7 @@
         <div class="row">
             {% for product in products %}
             <div class="col-3">
-                <img class="w-75" src="{% get_media_prefix %}qr_img/{{ product.id }}_qr.png"/>
+                <img class="w-75" src="{{ product.get_qr_url }}"/>
                 <p>{{ product.title }}</p>
             </div>
             {% endfor %}
